JumpScript/tests/baselines/reference/collisionThisExpressionAndFunctionInGlobal.errors.txt
tests/cases/compiler/collisionThisExpressionAndFunctionInGlobal.jump(1,10): error TS2399: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.


==== tests/cases/compiler/collisionThisExpressionAndFunctionInGlobal.jump (1 errors) ====
    function _this() { //Error
             ~~~~~
!!! error TS2399: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
        return 10;
    }
    var f = () => this;